--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="vh-100 d-flex flex-column">
     <div class="hstack bg-black">
-        <a class="mx-auto p-2 text-white" href="https://how-to-help-ukraine-now.super.site">Support Ukraine 🇺🇦</a>
+        <a class="mx-auto p-2 text-white" href="https://war.ukraine.ua">Support Ukraine 🇺🇦</a>
     </div>
 
     <div class="hstack p-2 gap-2 bg-light position-sticky top-0" style="z-index: 1;">
