feat: implemented basic math parsing

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         const docxOptions = Object.assign(docx.defaultOptions, {
             debug: true,
             experimental: true,
+            useMathMLPolyfill: true
         });
 
         const container = document.querySelector("#document-container");
