Fixed issue with chrome MathML

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         let currentDocument = null;
         const docxOptions = Object.assign(docx.defaultOptions, {
             debug: true,
-            experimental: true,
-            useMathMLPolyfill: true
+            experimental: true
         });
 
         const container = document.querySelector("#document-container");
