--- a/tests/render-test/header-footer/result.html
+++ b/tests/render-test/header-footer/result.html
@@ -1,119 +1,129 @@
 <!--docxjs library predefined styles--><style>
-  .docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
-  .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
-  .docx { color: black; }
-  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
-  section.docx>article { margin-bottom: auto; }
-  .docx table { border-collapse: collapse; }
-  .docx table td, .docx table th { vertical-align: top; }
-  .docx p { margin: 0pt; min-height: 1em; }
-  .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-  .docx a { color: inherit; text-decoration: inherit; }
-  </style><!--docxjs document styles--><style>.docx span {
-    font-family: Liberation Serif;
-  }
-  .docx p {
-  }
-  p.docx_normal {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_normal span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style14 {
-    margin-top: 12.00pt;
-    margin-bottom: 6.00pt;
-    text-align: left;
-  }
-  p.docx_style14 span {
-    font-family: Liberation Sans;
-    min-height: 14.00pt;
-    font-size: 14.00pt;
-    color: black;
-  }
-  p.docx_style15 {
-    margin-top: 0.00pt;
-    margin-bottom: 7.00pt;
-    line-height: 1.15;
-    text-align: left;
-  }
-  p.docx_style15 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style16 {
-    margin-top: 0.00pt;
-    margin-bottom: 7.00pt;
-    line-height: 1.15;
-    text-align: left;
-  }
-  p.docx_style16 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style17 {
-    margin-top: 6.00pt;
-    margin-bottom: 6.00pt;
-    text-align: left;
-  }
-  p.docx_style17 span {
-    font-style: italic;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-    font-family: Liberation Serif;
-    color: black;
-  }
-  p.docx_style18 {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_style18 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style19 {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_style19 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style20 {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_style20 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style21 {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_style21 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span>First Header</span></p></header><article><p class="docx_normal"><span>Content</span><span></span></p></article><footer><p class="docx_style21"><span>First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span> Header</span></p></header><article><p class="docx_normal"><span></span><span></span></p></article><footer><p class="docx_style21"><span style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span> Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span> Header</span></p></header><article><p class="docx_normal"><span></span></p></article><footer><p class="docx_style21"><span style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span> Footer</span></p></footer></section></div>
+.docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
+.docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
+.docx { color: black; hyphens: auto; }
+section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
+section.docx>article { margin-bottom: auto; }
+.docx table { border-collapse: collapse; }
+.docx table td, .docx table th { vertical-align: top; }
+.docx p { margin: 0pt; min-height: 1em; }
+.docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+.docx a { color: inherit; text-decoration: inherit; }
+</style><!--docxjs document styles--><style>.docx span {
+  font-family: Liberation Serif;
+}
+.docx p {
+  hyphens: none;
+}
+p.docx_normal {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_normal span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style14 {
+  margin-top: 12.00pt;
+  margin-bottom: 6.00pt;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style14 span {
+  font-family: Liberation Sans;
+  min-height: 14.00pt;
+  font-size: 14.00pt;
+  color: black;
+}
+p.docx_style15 {
+  margin-top: 0.00pt;
+  margin-bottom: 7.00pt;
+  line-height: 1.15;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style15 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style16 {
+  margin-top: 0.00pt;
+  margin-bottom: 7.00pt;
+  line-height: 1.15;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style16 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style17 {
+  margin-top: 6.00pt;
+  margin-bottom: 6.00pt;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style17 span {
+  font-style: italic;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+  font-family: Liberation Serif;
+  color: black;
+}
+p.docx_style18 {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_style18 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style19 {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_style19 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style20 {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_style20 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style21 {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_style21 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+</style><div class="docx-wrapper"><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span lang="en-US">First Header</span></p></header><article><p class="docx_normal"><span lang="en-US">Content</span><span></span></p></article><footer><p class="docx_style21"><span lang="en-US">First Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span lang="en-US" style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span lang="en-US"> Header</span></p></header><article><p class="docx_normal"><span lang="en-US"></span><span></span></p></article><footer><p class="docx_style21"><span lang="en-US" style="color: black; min-height: 12pt; font-size: 12pt;">Even</span><span lang="en-US"> Footer</span></p></footer></section><section class="docx" style="padding: 84.8pt 56.7pt 84.65pt; width: 595.3pt; min-height: 841.9pt;"><header><p class="docx_style20"><span lang="en-US" style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span lang="en-US"> Header</span></p></header><article><p class="docx_normal"><span></span></p></article><footer><p class="docx_style21"><span lang="en-US" style="color: black; min-height: 12pt; font-size: 12pt;">Odd</span><span lang="en-US"> Footer</span></p></footer></section></div>
