--- a/tests/render-test/revision/result.html
+++ b/tests/render-test/revision/result.html
@@ -1,107 +1,115 @@
 <!--docxjs library predefined styles--><style>
-  .docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
-  .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
-  .docx { color: black; }
-  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
-  section.docx>article { margin-bottom: auto; }
-  .docx table { border-collapse: collapse; }
-  .docx table td, .docx table th { vertical-align: top; }
-  .docx p { margin: 0pt; min-height: 1em; }
-  .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-  .docx a { color: inherit; text-decoration: inherit; }
-  </style><!--docxjs document styles--><style>.docx span {
-    font-family: Liberation Serif;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  .docx p {
-  }
-  p.docx_normal {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_normal span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  span.docx_style14 {
-  }
-  span.docx_style15 {
-  }
-  span.docx_style16 {
-  }
-  p.docx_style17 {
-    margin-top: 12.00pt;
-    margin-bottom: 6.00pt;
-    text-align: left;
-  }
-  p.docx_style17 span {
-    font-family: Liberation Sans;
-    min-height: 14.00pt;
-    font-size: 14.00pt;
-    color: black;
-  }
-  p.docx_style18 {
-    margin-top: 0.00pt;
-    margin-bottom: 7.00pt;
-    line-height: 1.15;
-    text-align: left;
-  }
-  p.docx_style18 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style19 {
-    margin-top: 0.00pt;
-    margin-bottom: 7.00pt;
-    line-height: 1.15;
-    text-align: left;
-  }
-  p.docx_style19 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style20 {
-    margin-top: 6.00pt;
-    margin-bottom: 6.00pt;
-    text-align: left;
-  }
-  p.docx_style20 span {
-    font-style: italic;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-    font-family: Liberation Serif;
-    color: black;
-  }
-  p.docx_style21 {
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_style21 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style22 {
-    text-indent: -17.00pt;
-    margin-left: 17.00pt;
-    margin-top: 0.00pt;
-    margin-bottom: 0.00pt;
-    text-align: left;
-  }
-  p.docx_style22 span {
-    min-height: 10.00pt;
-    font-size: 10.00pt;
-    font-family: Liberation Serif;
-    color: black;
-  }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal" style="text-align: left;"><span>Original text </span><span>insered</span><span> </span></p></article></section></div>
+.docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
+.docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
+.docx { color: black; hyphens: auto; }
+section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
+section.docx>article { margin-bottom: auto; }
+.docx table { border-collapse: collapse; }
+.docx table td, .docx table th { vertical-align: top; }
+.docx p { margin: 0pt; min-height: 1em; }
+.docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+.docx a { color: inherit; text-decoration: inherit; }
+</style><!--docxjs document styles--><style>.docx span {
+  font-family: Liberation Serif;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+.docx p {
+  hyphens: none;
+}
+p.docx_normal {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_normal span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+span.docx_style14 {
+}
+span.docx_style15 {
+}
+span.docx_style16 {
+}
+p.docx_style17 {
+  margin-top: 12.00pt;
+  margin-bottom: 6.00pt;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style17 span {
+  font-family: Liberation Sans;
+  min-height: 14.00pt;
+  font-size: 14.00pt;
+  color: black;
+}
+p.docx_style18 {
+  margin-top: 0.00pt;
+  margin-bottom: 7.00pt;
+  line-height: 1.15;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style18 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style19 {
+  margin-top: 0.00pt;
+  margin-bottom: 7.00pt;
+  line-height: 1.15;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style19 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style20 {
+  margin-top: 6.00pt;
+  margin-bottom: 6.00pt;
+  hyphens: none;
+  text-align: left;
+}
+p.docx_style20 span {
+  font-style: italic;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+  font-family: Liberation Serif;
+  color: black;
+}
+p.docx_style21 {
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_style21 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style22 {
+  text-indent: -17.00pt;
+  margin-left: 17.00pt;
+  hyphens: none;
+  margin-top: 0.00pt;
+  margin-bottom: 0.00pt;
+  text-align: left;
+}
+p.docx_style22 span {
+  min-height: 10.00pt;
+  font-size: 10.00pt;
+  font-family: Liberation Serif;
+  color: black;
+}
+</style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><p class="docx_normal" style="text-align: left;"><span lang="en-US">Original text </span><span lang="en-US">insered</span><span lang="en-US"> </span></p></article></section></div>
