--- a/tests/render-test/table/result.html
+++ b/tests/render-test/table/result.html
@@ -1,86 +1,86 @@
 <!--docxjs library predefined styles--><style>
-  .docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
-  .docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
-  .docx { color: black; }
-  section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
-  section.docx>article { margin-bottom: auto; }
-  .docx table { border-collapse: collapse; }
-  .docx table td, .docx table th { vertical-align: top; }
-  .docx p { margin: 0pt; min-height: 1em; }
-  .docx span { white-space: pre-wrap; overflow-wrap: break-word; }
-  .docx a { color: inherit; text-decoration: inherit; }
-  </style><!--docxjs document styles--><style>.docx span {
-    font-family: Liberation Serif;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  .docx p {
-  }
-  p.docx_normal {
-  }
-  p.docx_normal span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style14 {
-    margin-top: 12.00pt;
-    margin-bottom: 6.00pt;
-  }
-  p.docx_style14 span {
-    font-family: Liberation Sans;
-    min-height: 14.00pt;
-    font-size: 14.00pt;
-    color: black;
-  }
-  p.docx_style15 {
-    margin-top: 0.00pt;
-    margin-bottom: 7.00pt;
-    line-height: 1.15;
-  }
-  p.docx_style15 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style16 {
-    margin-top: 0.00pt;
-    margin-bottom: 7.00pt;
-    line-height: 1.15;
-  }
-  p.docx_style16 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style17 {
-    margin-top: 6.00pt;
-    margin-bottom: 6.00pt;
-  }
-  p.docx_style17 span {
-    font-style: italic;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-    font-family: Liberation Serif;
-    color: black;
-  }
-  p.docx_style18 {
-  }
-  p.docx_style18 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  p.docx_style19 {
-  }
-  p.docx_style19 span {
-    font-family: Liberation Serif;
-    color: black;
-    min-height: 12.00pt;
-    font-size: 12.00pt;
-  }
-  </style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><table style="width: 481.9pt; text-align: left;"><colgroup><col style="width: 241.2pt;"><col style="width: 124.2pt;"><col style="width: 116.5pt;"></colgroup><tr><td style="width: 241.2pt; border-top: 0.25pt solid rgb(0, 0, 0); border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span>Test</span></p></td><td style="width: 124.2pt; border-top: 0.25pt solid rgb(0, 0, 0); border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span>Test</span></p></td><td style="width: 116.5pt; border-width: 0.25pt; border-style: solid; border-color: rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span>Test</span></p></td></tr><tr style="height: 82.65pt;"><td style="width: 241.2pt; border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span>Test</span></p></td><td style="width: 124.2pt; border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; vertical-align: middle; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span>Test</span></p></td><td style="width: 116.5pt; border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); border-right: 0.25pt solid rgb(0, 0, 0); background-color: inherit; vertical-align: bottom; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19" style="text-align: right;"><span>Test</span></p></td></tr></table><p class="docx_normal"><span></span></p></article></section></div>
+.docx-wrapper { background: gray; padding: 30px; padding-bottom: 0px; display: flex; flex-flow: column; align-items: center; } 
+.docx-wrapper>section.docx { background: white; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); margin-bottom: 30px; }
+.docx { color: black; hyphens: auto; }
+section.docx { box-sizing: border-box; display: flex; flex-flow: column nowrap; position: relative; overflow: hidden; }
+section.docx>article { margin-bottom: auto; }
+.docx table { border-collapse: collapse; }
+.docx table td, .docx table th { vertical-align: top; }
+.docx p { margin: 0pt; min-height: 1em; }
+.docx span { white-space: pre-wrap; overflow-wrap: break-word; }
+.docx a { color: inherit; text-decoration: inherit; }
+</style><!--docxjs document styles--><style>.docx span {
+  font-family: Liberation Serif;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+.docx p {
+}
+p.docx_normal {
+}
+p.docx_normal span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style14 {
+  margin-top: 12.00pt;
+  margin-bottom: 6.00pt;
+}
+p.docx_style14 span {
+  font-family: Liberation Sans;
+  min-height: 14.00pt;
+  font-size: 14.00pt;
+  color: black;
+}
+p.docx_style15 {
+  margin-top: 0.00pt;
+  margin-bottom: 7.00pt;
+  line-height: 1.15;
+}
+p.docx_style15 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style16 {
+  margin-top: 0.00pt;
+  margin-bottom: 7.00pt;
+  line-height: 1.15;
+}
+p.docx_style16 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style17 {
+  margin-top: 6.00pt;
+  margin-bottom: 6.00pt;
+}
+p.docx_style17 span {
+  font-style: italic;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+  font-family: Liberation Serif;
+  color: black;
+}
+p.docx_style18 {
+}
+p.docx_style18 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+p.docx_style19 {
+}
+p.docx_style19 span {
+  font-family: Liberation Serif;
+  color: black;
+  min-height: 12.00pt;
+  font-size: 12.00pt;
+}
+</style><div class="docx-wrapper"><section class="docx" style="padding: 56.7pt; width: 595.3pt; min-height: 841.9pt;"><article><table style="width: 481.9pt; text-align: left;"><colgroup><col style="width: 241.2pt;"><col style="width: 124.2pt;"><col style="width: 116.5pt;"></colgroup><tr><td style="width: 241.2pt; border-top: 0.25pt solid rgb(0, 0, 0); border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span lang="en-US">Test</span></p></td><td style="width: 124.2pt; border-top: 0.25pt solid rgb(0, 0, 0); border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span lang="en-US">Test</span></p></td><td style="width: 116.5pt; border-width: 0.25pt; border-style: solid; border-color: rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span lang="en-US">Test</span></p></td></tr><tr style="height: 82.65pt;"><td style="width: 241.2pt; border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span lang="en-US">Test</span></p></td><td style="width: 124.2pt; border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); background-color: inherit; vertical-align: middle; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19"><span lang="en-US">Test</span></p></td><td style="width: 116.5pt; border-left: 0.25pt solid rgb(0, 0, 0); border-bottom: 0.25pt solid rgb(0, 0, 0); border-right: 0.25pt solid rgb(0, 0, 0); background-color: inherit; vertical-align: bottom; padding-top: 2.75pt; padding-bottom: 2.75pt;"><p class="docx_style19" style="text-align: right;"><span lang="en-US">Test</span></p></td></tr></table><p class="docx_normal"><span></span></p></article></section></div>
