added new equation test

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             renderDocx(ev.dataTransfer.files[0]);
         });
 
-        for (let testName of ['text','text-break','line-spacing','numbering','page-layout','table','table-spans','footnote','header-footer','revision'])
+        for (let testName of ['text','text-break','line-spacing','numbering','page-layout','table','table-spans','footnote','header-footer','revision','equation'])
         {
             var op = document.createElement("option");
             op.label = testName;
